update 1.3 Fixed width scroll issue on home

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Liam McKenna",
+  "name": "Liam McKenna React App",
   "icons": [
     {
       "src": "favicon.ico",
